--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent align-right">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <h3><small><a class="nav-link text-white menu" href="#">Fellows <span class="sr-only">(current)</span> |</a></small></h3>
+                <a class="nav-link text-white menu" href="#">Fellows <span class="sr-only">(current)</span> |</a>
               </li>
               <li class="nav-item">
-                <h3><small><a class="nav-link text-white menu" href="#">The ring |</a></small></h3>
+                <a class="nav-link text-white menu" href="#">The ring |</a>
               </li>
               <li class="nav-item">
-                <h3><small><a class="nav-link text-white menu" href="#">Reward |</a></small></h3>
+                <a class="nav-link text-white menu" href="#">Reward |</a>
               </li>
               <li class="nav-item">
-                <h3><small><a class="nav-link text-white menu" href="#">Hunters |</a></small></h3>
+                <a class="nav-link text-white menu" href="#">Hunters |</a>
               </li>
               <li class="nav-item">
-                <h3><small><a class="nav-link text-white menu" href="#">Join |</a></small></h3>
+                <a class="nav-link text-white menu" href="#">Join |</a>
               </li>
               <li class="nav-item">
-                <h3><small><a class="nav-link text-white menu" href="#">Contact</a></small></h3>
+                <a class="nav-link text-white menu" href="#">Contact</a>
               </li>
               
             </ul>
